# dock_client

./: .gitignore  .gitmodules  README.md
config/: uav.yaml
config/zenoh/: uav_ros2dds_bridge.json5
docs/: INSTALL_NEW_DEVICE.md  README.md  TEST_GUIDE.md  UAV_CLIENT_FLOW.mmd  UAV_CLIENT_STATE.mmd
scripts/: run_bridge_uav.sh  run_ros_uav_client.sh  run_ros_uav_release.sh  run_ros_uav_request.sh  run_uav_zenoh.sh  setup_dev.sh  setup_ros_uav_minimal.sh
tools/zenoh_uav/: uav_node.py
tools/zenoh_uav/common/: protocol.py
uav_ws/src/dock_interfaces/: CMakeLists.txt  package.xml
uav_ws/src/dock_interfaces/msg/: DockBeacon.msg  DockContact.msg  DockGps.msg  DockState.msg  UavGps.msg  UavStatus.msg
uav_ws/src/dock_interfaces/srv/: ReleaseDock.srv  ReserveDock.srv
uav_ws/src/uav_dock_client/: package.xml  setup.cfg  setup.py
uav_ws/src/uav_dock_client/uav_dock_client/: uav_dock_client_node.py
