<?xml version="1.0"?>
<package format="3">
  <name>dock_interfaces</name>
  <version>0.0.1</version>
  <description>CTUAV Dock ROS 2 interfaces.</description>
  <maintainer email="ctuav@example.com">ctuav</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
