<?xml version="1.0"?>
<package format="3">
  <name>uav_dock_client</name>
  <version>0.0.1</version>
  <description>CTUAV UAV Dock client.</description>
  <maintainer email="ctuav@example.com">ctuav</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>dock_interfaces</depend>
  <depend>px4_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
